Adds missing entries to build properties

--- a/org.globaltester.testrunner.doc/build.properties
+++ b/org.globaltester.testrunner.doc/build.properties
@@ -4,6 +4,7 @@ bin.includes = META-INF/,\
                html/,\
                cheatsheets/,\
                LICENSE,\
-               NOTICE
+               NOTICE,\
+               images/
 src.includes = NOTICE,\
                LICENSE
