--- a/org.globaltester.testrunner.ui/plugin.xml
+++ b/org.globaltester.testrunner.ui/plugin.xml
@@ -139,4 +139,28 @@
             name="TestRunner">
       </page>
    </extension>
+   
+   <extension
+         point="org.eclipse.ui.views">
+      <view
+            name="Result View"
+            icon="icons/result.png"
+            category="org.globaltester.base.ui.views.category"
+            class="org.globaltester.testrunner.ui.views.ResultView"
+            id="org.globaltester.testrunner.ui.views.ResultView">
+      </view>
+   </extension>
+
+   <extension
+         point="org.eclipse.ui.perspectiveExtensions">
+      <perspectiveExtension
+            targetID="org.globaltester.base.ui.perspective.GlobalTesterPerspective">
+         <view
+               id="org.globaltester.testrunner.ui.views.ResultView"
+               ratio="0.5"
+               relationship="stack"
+               relative="org.eclipse.ui.views.ProblemView">
+         </view>
+      </perspectiveExtension>
+   </extension>
 </plugin>
